2009-09-15 Magnus Hagdorn
 * convert some more comments in another bunch of files to doxygen strings
 * libglimmer/glimmer_ncdf.F90: move second module to glimmer_scales.F90

2009-09-15 Magnus Hagdorn
 * convert comments in a bunch of files to doxygen strings

2009-09-14 Magnus Hagdorn
 * README: document new make target to build tar-ball of html docs
 * doc/Makefile.am: new target to build tar-ball of html docs which
   can be uploaded to berliOS (or elsewhere)

2009-09-10 Magnus Hagdorn
 * libglimmer/glimmer_ts.F90: change documentation strings to doxygen

2009-09-10 Magnus Hagdorn
 * README: document documentation build
 * bootstrap: don't warn about possible incompatibilities in Makefiles
 * configure.in: find doxygen
 * doc/Makefile.am: add targets for doxygen 
 * doc/glimmer-cism.cfg.in: added template doxygen configuration
 * m4macros/amdoxygen.am: makefile snippet for doxygen
 * m4macros/ax_prog_doxygen.m4: autoconf macro for handling doxygen

2009-09-08 Magnus Hagdorn
 * libglimmer/glimmer_vers.F90.in.in: fix fortran error

2009-09-07 Magnus Hagdorn
 * libglimmer/glimmer_vers.F90.in.in: version numbers are no longer stored in
   a module, but accessed through accessors to avoid unnessary recompilations
 * libglide/glide.F90: call new accessor to get version
 * libglide/glimmer_ncparams.F90: ditto
 * libglimmer/Makefile.am: pass top source directory to version script
 * libglimmer/createSVNVersion.sh: run svnversion on top source dir
 * libglimmer/glimmer_global.F90: do not load version numbers

2009-09-07 Magnus Hagdorn
 * doc/common/Makefile.am: forgot to distribute file
 * doc/num/figs/Makefile.am: ditto
 * doc/ug/varlist.tex: include list of variables

2009-09-07 Magnus Hagdorn
 * Makefile.am: forgot sub directory
 * configure.in: rename package to glimmer-cism
 * doc/Makefile.am: do not distribute generated docs
 * doc/dg/figures/Makefile.am: do not distribute images
 * doc/num/figs/Makefile.am: ditto
 * doc/num/gnu/Makefile.am: ditto